rajout de la ligne entre inscription et connexion

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                 <button class="cta-btn">S'inscrire</button>
             </form>
         </div>
+        <div class="line"></div>
         <div class="signin-card">
             <h2>Connexion</h2>
         <form action="">
